@@ -14,11 +14,12 @@ Andrzej Szombierski
   Jackdmp changes log
 ---------------------------
 
-2007-11-01 Stephane Letz  <letz@grame.fr>
+2007-11-02 Stephane Letz  <letz@grame.fr>
 
 	* Correct ALSA driver Attach method: internal driver may have changed the buffer_size and sample_rate values.
+	* Add JackWinSemaphore class.
 
-2007-10-31 Stephane Letz  <letz@grame.fr>
+2007-10-01 Stephane Letz  <letz@grame.fr>
 
 	* Server and user directory related code moved in a JackTools file.
 	* Client name rewritting to remove path characters (used in fifo naming).
